# app/models/epicenters/event.rb
@@ -1,16 +1,13 @@
 # == Schema Information
 #
-# Table name: epicenters
+# Table name: events
 #
-#  id          :bigint(8)        not null, primary key
-#  type        :string
-#  parent_id   :integer
-#  level       :integer
-#  slug        :string
-#  name        :string
-#  description :string
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id         :bigint(8)        not null, primary key
+#  slug       :string
+#  name       :string
+#  data       :jsonb
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
 #
 
 class Event < Epicenter
