# app/models/fruit.rb
@@ -18,9 +18,5 @@ class Fruit < ApplicationRecord
   validates :monthly_decay, :presence => true, 
     :numericality => { only_float: true, greater_than: 0.01 }, 
     :inclusion => { in: 0..1 }
-
-  def owner_type=(class_name)
-    super(class_name.constantize.base_class.to_s)
-  end
   
 end
