# swagger/v1/swagger.json
@@ -5,44 +5,36 @@
     "version": "v1"
   },
   "paths": {
-    "/api/v1/epicenters": {
+    "/api/v1/events": {
       "get": {
-        "summary": "Retrieves list of Epicenters",
+        "summary": "Retrieves list of events",
         "tags": [
-          "Epicenters"
+          "events"
         ],
         "responses": {
           "200": {
-            "description": "epicenters retrieved"
+            "description": "events retrieved"
           }
         }
       },
       "post": {
-        "summary": "Creates an Epicenter",
+        "summary": "Creates an event",
         "tags": [
-          "Epicenters"
+          "events"
         ],
         "consumes": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "epicenter",
+            "name": "event",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "type": "integer"
-                },
-                "type": {
-                  "type": "string"
-                },
-                "parent_id": {
-                  "type": [
-                    "integer",
-                    null
-                  ]
+                  "type": "integer",
+                  "decription": "hello"
                 },
                 "slug": {
                   "type": "string"
@@ -50,16 +42,20 @@
                 "name": {
                   "type": "string"
                 },
-                "description": {
-                  "type": [
-                    "string",
-                    null
-                  ]
+                "data": {
+                  "type": "object"
+                },
+                "caretaker_id": {
+                  "type": "integer"
+                },
+                "owner_id": {
+                  "type": "integer"
+                },
+                "owner_type": {
+                  "type": "integer"
                 }
               },
               "required": [
-                "type",
-                "slug",
                 "name"
               ]
             }
@@ -67,7 +63,7 @@
         ],
         "responses": {
           "201": {
-            "description": "epicenter created"
+            "description": "event created"
           },
           "422": {
             "description": "invalid request"
@@ -75,11 +71,11 @@
         }
       }
     },
-    "/api/v1/epicenters/{id}": {
+    "/api/v1/events/{id}": {
       "put": {
-        "summary": "Updates an epicenter by ID",
+        "summary": "Updates an event by ID",
         "tags": [
-          "Epicenters"
+          "events"
         ],
         "produces": [
           "application/json"
@@ -95,22 +91,14 @@
             "required": true
           },
           {
-            "name": "epicenter",
+            "name": "event",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "type": "integer"
-                },
-                "type": {
-                  "type": "string"
-                },
-                "parent_id": {
-                  "type": [
-                    "integer",
-                    null
-                  ]
+                  "type": "integer",
+                  "decription": "hello"
                 },
                 "slug": {
                   "type": "string"
@@ -118,16 +106,20 @@
                 "name": {
                   "type": "string"
                 },
-                "description": {
-                  "type": [
-                    "string",
-                    null
-                  ]
+                "data": {
+                  "type": "object"
+                },
+                "caretaker_id": {
+                  "type": "integer"
+                },
+                "owner_id": {
+                  "type": "integer"
+                },
+                "owner_type": {
+                  "type": "integer"
                 }
               },
               "required": [
-                "type",
-                "slug",
                 "name"
               ]
             }
@@ -135,14 +127,14 @@
         ],
         "responses": {
           "200": {
-            "description": "epicenter updated"
+            "description": "event updated"
           }
         }
       },
       "get": {
-        "summary": "Retrieves an epicenter by ID",
+        "summary": "Retrieves an event by ID",
         "tags": [
-          "Epicenters"
+          "events"
         ],
         "produces": [
           "application/json"
@@ -157,21 +149,13 @@
         ],
         "responses": {
           "200": {
-            "description": "epicenter not found",
+            "description": "event not found",
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
-                  "type": "integer"
-                },
-                "type": {
-                  "type": "string"
-                },
-                "parent_id": {
-                  "type": [
-                    "integer",
-                    null
-                  ]
+                  "type": "integer",
+                  "decription": "hello"
                 },
                 "slug": {
                   "type": "string"
@@ -179,17 +163,21 @@
                 "name": {
                   "type": "string"
                 },
-                "description": {
-                  "type": [
-                    "string",
-                    null
-                  ]
+                "data": {
+                  "type": "object"
+                },
+                "caretaker_id": {
+                  "type": "integer"
+                },
+                "owner_id": {
+                  "type": "integer"
+                },
+                "owner_type": {
+                  "type": "integer"
                 }
               },
               "required": [
                 "id",
-                "type",
-                "slug",
                 "name"
               ]
             }
@@ -197,40 +185,35 @@
         }
       }
     },
-    "/api/v1/epicenters/{slug}": {
+    "/api/v1/users": {
       "get": {
-        "summary": "Retrieves an epicenter by slug",
+        "summary": "Retrieves list of users",
         "tags": [
-          "Epicenters"
+          "users"
         ],
-        "produces": [
+        "responses": {
+          "200": {
+            "description": "users retrieved"
+          }
+        }
+      },
+      "post": {
+        "summary": "Creates an user",
+        "tags": [
+          "users"
+        ],
+        "consumes": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "slug",
-            "in": "path",
-            "type": "string",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "epicenter not found",
+            "name": "user",
+            "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "id": {
                   "type": "integer"
-                },
-                "type": {
-                  "type": "string"
-                },
-                "parent_id": {
-                  "type": [
-                    "integer",
-                    null
-                  ]
                 },
                 "slug": {
                   "type": "string"
@@ -238,17 +221,113 @@
                 "name": {
                   "type": "string"
                 },
-                "description": {
-                  "type": [
-                    "string",
-                    null
-                  ]
+                "data": {
+                  "type": "object"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "user created"
+          },
+          "422": {
+            "description": "invalid request"
+          }
+        }
+      }
+    },
+    "/api/v1/users/{id}": {
+      "put": {
+        "summary": "Updates an user by ID",
+        "tags": [
+          "users"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true
+          },
+          {
+            "name": "user",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "slug": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "object"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user updated"
+          }
+        }
+      },
+      "get": {
+        "summary": "Retrieves an user by ID",
+        "tags": [
+          "users"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user not found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "slug": {
+                  "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "data": {
+                  "type": "object"
                 }
               },
               "required": [
                 "id",
-                "type",
-                "slug",
                 "name"
               ]
             }
